--- a/style.css
+++ b/style.css
@@ -1,33 +1,138 @@
 body {
-    width: 100vh;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 .nav {
-    width: 30vh;
-    height: 100vh;
-    background-color: gray;
+  width: 15%;
+  height: 100vh;
+  background-color: gray;
 }
 
 .nav span {
-    background-color: purple;
-    padding: 1rem 0.5rem 1rem 0.5rem;
-    margin: 0 1rem 0 1rem;
-    display: flex;
-    justify-content: center;
-    transform: translateY(50%);
+  background-color: purple;
+  padding: 1rem 0.5rem 1rem 0.5rem;
+  margin: 0 1rem 0 1rem;
+  display: flex;
+  justify-content: center;
+  transform: translateY(50%);
 }
 
-
 .main {
-    width: 70vh;
-    height: 70vh;
+  width: 100%;
+  height: 100%;
+  float: right;
 }
 
 .header {
+  display: flex;
+  width: 100%;
+  height: calc(5% + 0.5rem);
+  background-color: lightgray;
+  align-items: center;
+}
+
+.logo2 {
+  display: flex;
+  border: 1px solid gray;
+  padding: 0.5rem;
+  border-radius: 20%;
+  background-color: gray;
+}
+.feed {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.pink {
+  width: 80%;
+  height: 60vh;
+  background-color: pink;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border: 1px solid gray;
+  border-radius: 10px;
+}
+
+.pink .input {
+  padding: 2rem;
+  text-align: center;
+  border: 1px solid gray;
+  border-radius: 5%;
+}
+
+.pink .button {
+  display: block;
+  width: 100px;
+  height: 60px;
+  margin-top: 1rem;
+}
+
+.mobileHeader {
+  float: left;
+}
+
+@media only screen and (max-width: 600px) {
+  .nav {
+    display: none;
+  }
+  .header {
+    height: calc(5% + 0.75rem);
+    justify-content: space-between;
+    padding: .5rem 1rem 0.5rem 1rem;
+  }
+  .logo2 {
+    margin-right: 1.5rem;
+  }
+  .feed {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: static;
+    top: 0%;
+    transform: translateY(0%);
+    z-index: -1;
+  }
+  .pink {
     width: 100vh;
-    height: 30vh;
-    background-color: lightgray;
+    height: 40vh;
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    border: 0px solid gray;
+    border-radius: 0px;
+  }
+  .pink .button {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .mobileHeader {
+    display: none;
+  }
+  .header {
+    display: flex;
+  }
+  .logo2{
+    margin: 1rem;
+    margin-left: auto;
+    justify-content: flex-end !important;
+  }
+  
+  
 }
